[gd_scene load_steps=5 format=3 uid="uid://ca3lws27wtksg"]

[ext_resource type="FontFile" uid="uid://bpsefiotqlkol" path="res://fonts/ARCADECLASSIC.TTF" id="1"]
[ext_resource type="Script" path="res://ui/status_bar/StatusBar.gd" id="2"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)

[node name="StatusBar" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 12.0
color = Color(0.776471, 0.815686, 0.615686, 1)

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 44.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0.0588235, 0.219608, 0.0588235, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 9
text = "SCORE  0"

[node name="LivesLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 1.0
offset_right = 156.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0.0588235, 0.219608, 0.0588235, 1)
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 9
text = "Lives  3"
